--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang = "es">
 <head>
+  <meta charset="UTF-8">
 <title>Hello World!</title>
 <link rel="stylesheet" href="bluestyle.css">
 </head>
+
 <body>
 
 <h1>Hello world!</h1>
